20260116 #184 출석체크 리팩토링 (#189)
* fix(entity): 출석체크 관련 엔티티 수정

* feat(세션): 관리자기능만 추가

* fix(수정): userId검증로직 추가